--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build; babel-node server/index.js",
     "start": "next start",
     "lint": "next lint",
     "server": "babel-node server/index.js",
