--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@apollo/client": "^3.6.6",
     "apollo-datasource-mongodb": "^0.5.4",
     "apollo-server": "^3.8.1",
+    "apollo-server-express": "^3.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.3.5",
     "next": "12.1.6",
@@ -30,11 +33,11 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@graphql-codegen/cli": "2.11.6",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "@graphql-codegen/introspection": "2.2.1",
     "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/introspection": "2.2.1"
+    "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6"
   }
 }
